fix search border radius cannot normaly display on iOS

--- a/my-app/src/components/layout/search.css
+++ b/my-app/src/components/layout/search.css
@@ -1,6 +1,6 @@
 .search-bar{
     width: 45%;
-    height: 45px;
+    height: 40px;
     margin-right: 20px;
 }
 
@@ -9,23 +9,29 @@
     position: relative;
     display: flex;
     overflow: hidden;
+    border: 3px solid #00B4CC;
+    border-radius: 5px 5px 5px 5px;
+    background: #fff;
+    height: 35px;
+    /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+     -webkit-border-radius: 5px 5px 5px 5px;
+     /* Firefox 1-3.6 */
+     -moz-border-radius: 5px 5px 5px 5px;
 }
 
 .search-input{
      width: 100%;
-     border: 3px solid #00B4CC;
+     /* border: 3px solid #00B4CC; */
      border-right: none;
-     padding: 5px;
-     height: 35px;
+     /* padding: 5px; */
+     /* height: 35px; */
       /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
-     border-radius: 5px 0 0 5px;
-     /* Safari 3-4, iOS 1-3.2, Android 1.6- */
-     -webkit-border-radius: 5px 0 0 5px;
-     /* Firefox 1-3.6 */
-     -moz-border-radius: 5px 0 0 5px;
+     /* border-radius: 5px 0 0 5px; */
+     padding-left: 3px;
      outline: none;
      color: #190E4F;
-     background: hsl(0, 0%, 100%);
+     /* background: hsl(0, 0%, 100%); */
+     background: transparent;
      overflow: hidden;
      border-collapse: separate;
 }
@@ -42,21 +48,14 @@
 
 .search-button{
     width: 40px;
-    height: 35px;
+    height: 30px;
     border: 1px solid #00B4CC;
     background: #00B4CC;
     text-align: center;
     color: #fff;
-    border-radius: 0 5px 5px 0;
+    /* border-radius: 0 5px 5px 0; */
     cursor: pointer;
     font-size: 20px;
-}
-
-.search-group {
-    /* float: left; */
-    /* width: 50%; */
-    box-sizing: border-box;
-    padding: 2px 0 2px 0;
 }
 
 .error-message{
